
[TestGenerate/no_imports - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

func NewPoint(
    x int,
    y int,
) *point {
    return &point{
        x: x,
        y: y,
    }
}

---

[TestGenerate/with_imports - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    "example.com/bar"
    "example.com/foo"
)

func NewMyStruct(
    a foo.Foo,
    b bar.Bar,
) *myStruct {
    return &myStruct{
        a: a,
        b: b,
    }
}

---

[TestGenerate/filter_types - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

func NewFoo(
    x int,
) *foo {
    return &foo{
        x: x,
    }
}

func NewBaz(
    z float64,
) *baz {
    return &baz{
        z: z,
    }
}

---

[TestGenerate/unused_imports_removed - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    "example.com/bar"
    "example.com/foo"
)

func NewMyStruct(
    a foo.Foo,
    b bar.Bar,
) *myStruct {
    return &myStruct{
        a: a,
        b: b,
    }
}

---

[TestGenerate/with_generic_fields - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    "example.com/optional"
    "example.com/result"
)

func NewMyStruct(
    a optional.Optional[string],
    b result.Result[int, error],
) *myStruct {
    return &myStruct{
        a: a,
        b: b,
    }
}

---

[TestGenerate/with_func_fields - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    "example.com/bar"
    "example.com/foo"
)

func NewMyStruct(
    handler func(foo.Foo) bar.Bar,
    cb func() error,
) *myStruct {
    return &myStruct{
        handler: handler,
        cb:      cb,
    }
}

---

[TestGenerate/with_pointer_slice_map_chan - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    "example.com/bar"
    "example.com/foo"
)

func NewMyStruct(
    a *foo.Foo,
    b []bar.Bar,
    c map[foo.Foo]bar.Bar,
    d chan foo.Foo,
) *myStruct {
    return &myStruct{
        a: a,
        b: b,
        c: c,
        d: d,
    }
}

---

[TestGenerate/with_embedded_fields - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

func NewMyStruct(
    a int,
    b string,
) *myStruct {
    return &myStruct{
        a: a,
        b: b,
    }
}

---

[TestGenerate/exported_and_multiname - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

func NewPoint(
    a int,
    b int,
    name string,
) *Point {
    return &Point{
        a:    a,
        b:    b,
        name: name,
    }
}

---

[TestGenerate/with_aliased_imports - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    f "example.com/foo"
)

func NewMyStruct(
    a f.Foo,
) *myStruct {
    return &myStruct{
        a: a,
    }
}

---

[TestGenerate/non_struct_types - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

func NewPoint(
    x int,
    y int,
) *point {
    return &point{
        x: x,
        y: y,
    }
}

---

[TestGenerate/with_mixed_imports - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    "context"
    "example.com/foo"
    "time"
)

func NewMyStruct(
    ctx context.Context,
    created time.Time,
    item foo.Foo,
) *myStruct {
    return &myStruct{
        ctx:     ctx,
        created: created,
        item:    item,
    }
}

---
